--- a/src/app.css
+++ b/src/app.css
@@ -1,4 +1,11 @@
+* {
+    padding: 0;
+    margin: 0;
+    outline: 0;
+    box-sizing: border-box;
+}
 body {
+    width: 100%;
     font-family: Arial, Helvetica, sans-serif;
     background-color: blueviolet;
     color: white;
