--- a/src/app.css
+++ b/src/app.css
@@ -1,12 +1,12 @@
 * {
-    padding: 0;
-    margin: 0;
-    outline: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  outline: 0;
+  box-sizing: border-box;
 }
 body {
-    width: 100%;
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: blueviolet;
-    color: white;
+  width: 100%;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: rgba(190, 25, 25, 0.767);
+  color: white;
 }
